--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,14 @@ dependencies:
   flutter:
     sdk: flutter
   http: '>=0.13.0'
+  # socket_io_client: '>=1.0.1'
+  # socket_io_client: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  socket_io_client: ^2.0.0-beta.4-nullsafety.0
 
 dev_dependencies:
   flutter_test:
